--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@fontsource/roboto": "^4.5.1",
+    "@iconify/react": "^3.1.0",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.2",
+    "@supabase/supabase-js": "^1.28.5",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
