--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@supabase/supabase-js": "^1.28.5",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-responsive-carousel": "^3.2.22"
   },
   "devDependencies": {
     "eslint": "7.32.0",
