--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.2",
     "@supabase/supabase-js": "^1.28.5",
-    "next": "12.0.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-responsive-carousel": "^3.2.22"
+    "next": "^12.0.4",
+    "node": "^17.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.22",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "eslint": "7.32.0",
